Bone Pickaxe Mod (AKA BPM)
Started project 13 July, 2022
Updated to 1.1 14 August, 2022
Updated to 1.2 17 August, 2022
Started 2.0 update 5 January, 2023

CHANGELOG V2.0

TODO- Added Yany's Hardcore Hell from Yany's Stuff&Things Addon
        >https://www.sargunster.com/btwforum/viewtopic.php?t=9873&start=25
        >Big shout out to Yany, creator of amazing addons
        
TODO- Add config for branch dropping maybe? Or just disable it, who knows

- Tweaked hunger system so that the player can jump and move around longer before starving.
- Tweaked hunger system so that the player starves slower in general 
TODO: DETECT IF DAWN MOD IS INSTALLED TO PREVENT CRASH
        > Check SCDecoIntegration.java

***
CHANGELOG V 1.2

- Updated the mod to support CE 1.4.1 (sweet dreams!)

- Added the iron knife, a sharper, more durable knife

- Added recipes to return knives to your inventory if they are being used to cut something

- Added recipes for cracking open ribs using axes, it's faster than cutting in a pinch

- Changed flint knapping to match the system in SBTW. You are now allowed 3 bad hits before the flint shatters and blinds you

***
CHANGELOG V 1.1:

- Fixed issue where knives did not break webs properly

- Fixed issue where THE DEATH CLUB wasn't in the mod

- Fixed issue where leaves did not drop branches on decay

***
CHANGELOG V 1.0:

- Added new cow drop: beef rib
    >can be cooked in an oven or in a pan

- Added new item: the rib bone
    > can be acquired by cutting a hunk of beef rib    
    
- Added new tool: the bone pickaxe
    > crafted from a cow's rib bone
    
- Added old block: the workbench/crafting table
    >crafted with an iron ingot and 8 planks
    
Added new tool type: knives
NOTE: can't add proper animations without editing the player class, so those are left out in this version
    >crafted with flint + stone 
    > can carve wood, cut branches, cut hemp, carve ribs, cut leather
    > can stab things with them
    