@@ -4,6 +4,13 @@ Updated to 1.1 14 August, 2022
 Updated to 1.2 17 August, 2022
 Started 2.0 update 5 January, 2023
 
+NOTE TO AARON: 
+                
+                :D
+                
+                
+                Hi Aaron, don't forget to delete DLMain.java, DLLightSource.java before releasing!! (look up gitignore)
+
 CHANGELOG V2.0
 
 TODO- Added Yany's Hardcore Hell from Yany's Stuff&Things Addon
